// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api Confirmation Modal render tests does not show when isVisible is set to false 1`] = `
<CustomModalComponent
  animationType="none"
  isVisible={false}
  modalType="Error"
  onClose={[Function]}
>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
          "padding": 15,
          "textAlign": "center",
        }
      }
    >
      I am the main text
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-around",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.CANCEL\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
    <Button
      backgroundColor="#D6512D"
      disabled={false}
      height={45}
      onPress={[MockFunction]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.OK\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</CustomModalComponent>
`;

exports[`Api Confirmation Modal render tests renders correctly when the api has failed, error text 1`] = `
<CustomModalComponent
  animationType="none"
  isVisible={true}
  modalType="Error"
  onClose={[Function]}
>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <mockConstructor
      color="#f44336"
      name="alert"
      size={30}
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
    <Text
      style={
        Object {
          "fontSize": 18,
          "padding": 15,
          "textAlign": "center",
        }
      }
    >
      I am the text of error
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-around",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.CANCEL\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
    <Button
      backgroundColor="#D6512D"
      disabled={false}
      height={45}
      onPress={[MockFunction]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.RETRY\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</CustomModalComponent>
`;

exports[`Api Confirmation Modal render tests renders correctly when the api has failed, no error text 1`] = `
<CustomModalComponent
  animationType="none"
  isVisible={true}
  modalType="Error"
  onClose={[Function]}
>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 5,
          "paddingHorizontal": 15,
          "paddingTop": 15,
          "textAlign": "center",
        }
      }
    >
      I am the main text
    </Text>
    <Text
      style={
        Object {
          "fontSize": 14,
          "paddingBottom": 15,
          "paddingHorizontal": 15,
          "textAlign": "center",
        }
      }
    >
      I am the secondary line of text
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-around",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.CANCEL\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
    <Button
      backgroundColor="#D6512D"
      disabled={false}
      height={45}
      onPress={[MockFunction]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.RETRY\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</CustomModalComponent>
`;

exports[`Api Confirmation Modal render tests renders correctly when the api is at rest, Confirm button custom text 1`] = `
<CustomModalComponent
  animationType="none"
  isVisible={true}
  modalType="Error"
  onClose={[Function]}
>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 5,
          "paddingHorizontal": 15,
          "paddingTop": 15,
          "textAlign": "center",
        }
      }
    >
      I am the main text
    </Text>
    <Text
      style={
        Object {
          "fontSize": 14,
          "paddingBottom": 15,
          "paddingHorizontal": 15,
          "textAlign": "center",
        }
      }
    >
      I am the secondary line of text
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-around",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.CANCEL\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
    <Button
      backgroundColor="#D6512D"
      disabled={false}
      height={45}
      onPress={[MockFunction]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="Custom Confirmation Text"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</CustomModalComponent>
`;

exports[`Api Confirmation Modal render tests renders correctly when the api is at rest, cancel button custom text 1`] = `
<CustomModalComponent
  animationType="none"
  isVisible={true}
  modalType="Error"
  onClose={[Function]}
>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 5,
          "paddingHorizontal": 15,
          "paddingTop": 15,
          "textAlign": "center",
        }
      }
    >
      I am the main text
    </Text>
    <Text
      style={
        Object {
          "fontSize": 14,
          "paddingBottom": 15,
          "paddingHorizontal": 15,
          "textAlign": "center",
        }
      }
    >
      I am the secondary line of text
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-around",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="Custom Cancel Text"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
    <Button
      backgroundColor="#D6512D"
      disabled={false}
      height={45}
      onPress={[MockFunction]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.OK\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</CustomModalComponent>
`;

exports[`Api Confirmation Modal render tests renders correctly when the api is at rest, three lines of text 1`] = `
<CustomModalComponent
  animationType="none"
  isVisible={true}
  modalType="Error"
  onClose={[Function]}
>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 5,
          "paddingHorizontal": 15,
          "paddingTop": 15,
          "textAlign": "center",
        }
      }
    >
      I am the main text
    </Text>
    <Text
      style={
        Object {
          "fontSize": 14,
          "paddingBottom": 15,
          "paddingHorizontal": 15,
          "textAlign": "center",
        }
      }
    >
      I am the secondary line of text
    </Text>
    <Text
      style={
        Object {
          "fontSize": 14,
          "paddingBottom": 15,
          "paddingHorizontal": 15,
          "textAlign": "center",
        }
      }
    >
      I am the tertiary line of text
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-around",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.CANCEL\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
    <Button
      backgroundColor="#D6512D"
      disabled={false}
      height={45}
      onPress={[MockFunction]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.OK\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</CustomModalComponent>
`;

exports[`Api Confirmation Modal render tests renders correctly when the api is at rest, two lines of text 1`] = `
<CustomModalComponent
  animationType="none"
  isVisible={true}
  modalType="Error"
  onClose={[Function]}
>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 5,
          "paddingHorizontal": 15,
          "paddingTop": 15,
          "textAlign": "center",
        }
      }
    >
      I am the main text
    </Text>
    <Text
      style={
        Object {
          "fontSize": 14,
          "paddingBottom": 15,
          "paddingHorizontal": 15,
          "textAlign": "center",
        }
      }
    >
      I am the secondary line of text
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-around",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.CANCEL\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
    <Button
      backgroundColor="#D6512D"
      disabled={false}
      height={45}
      onPress={[MockFunction]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.OK\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</CustomModalComponent>
`;

exports[`Api Confirmation Modal render tests renders correctly when the the api is at rest, one line of text 1`] = `
<CustomModalComponent
  animationType="none"
  isVisible={true}
  modalType="Error"
  onClose={[Function]}
>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 18,
          "padding": 15,
          "textAlign": "center",
        }
      }
    >
      I am the main text
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "space-around",
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <Button
      backgroundColor="#0071e9"
      disabled={false}
      height={45}
      onPress={[Function]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.CANCEL\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
    <Button
      backgroundColor="#D6512D"
      disabled={false}
      height={45}
      onPress={[MockFunction]}
      radius={5}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 10,
        }
      }
      title="[missing \\"en.GENERICS.OK\\" translation]"
      titleColor="#ffffffff"
      titleFontSize={16}
      titleFontWeight="normal"
      type={1}
      width={-1}
    />
  </View>
</CustomModalComponent>
`;
